--- a/src/resources/css/reset.css
+++ b/src/resources/css/reset.css
@@ -60,9 +60,10 @@ h4,h5,h6{
 	font-size:12px;
 }
 /* ul ol dl */
-ul,li{
+ul,li,ol{
     margin: 0;
 	padding:0;
+	list-style-type:none;
 }
 ol{
     margin: 0 0 18px 0;
